working on new account inputs

--- a/todo
+++ b/todo
@@ -1,13 +1,15 @@
 Next:
-Style the input and select button
-Filter the transactions
-Style the transactions
+Input income
+Input bank balances
 
 In the Future:
 Store editability
 Store edit modal
 Input income
 Input bank balances
+Style the input and select button
+Filter the transactions
+Style the transactions
 
 Nice to Have:
 Figure out how to have the data come back right after uploading the file
